--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!--weinre debugger-->
+    <script src="https://cdn.ravenjs.com/3.24.0/raven.min.js"
+            crossorigin="anonymous"></script>
     <script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>
     <title>Website</title>
     <script src="%PUBLIC_URL%/fastclick.js"></script>
@@ -41,6 +43,10 @@
     -->
   </body>
   <script>
+    Raven.config('https://e9345f4fff0c4151a5a4cdf19225e5f1@sentry.io/627835', {
+      release: '0.1.0'
+    }).install();
+
     if ('addEventListener' in document) {
       document.addEventListener('DOMContentLoaded', function() {
         FastClick.attach(document.body);
