--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="%PUBLIC_URL%/lib/dropzone/basic.min.css">
+    <link href="%PUBLIC_URL%/lib/dropzone/dropzone.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +26,9 @@
             crossorigin="anonymous"></script>
     <script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>
     <title>Website</title>
-    <script src="%PUBLIC_URL%/fastclick.js"></script>
+    <script src="%PUBLIC_URL%/lib/fastclick/fastclick.js"></script>
+    <script src="%PUBLIC_URL%/lib/dropzone/dropzone.min.js"></script>
+
   </head>
   <body>
     <noscript>
@@ -47,10 +51,10 @@
       release: '0.1.0'
     }).install();
 
-    if ('addEventListener' in document) {
-      document.addEventListener('DOMContentLoaded', function() {
-        FastClick.attach(document.body);
-      }, false);
-    }
+//    if ('addEventListener' in document) {
+//      document.addEventListener('DOMContentLoaded', function() {
+//        FastClick.attach(document.body);
+//      }, false);
+//    }
   </script>
 </html>
